<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <EditText
        android:id="@+id/etItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item"/>

    <TextView
        android:id="@+id/tvItemType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/item_type" />

    <Spinner
        android:id="@+id/ddType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/type_array"
        android:prompt="@string/type"/>

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/estimated_price"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_purchased" />

</LinearLayout>
